# TuxSplit

./: Cargo.toml  README.md  com.tunixr.tuxsplit-beta.json  config.yaml
data/: tuxsplit.xml
data/css/: livesplit-gtk.css  tuxsplit.css
data/ui/: livesplit-gtk.ui
src/: config.rs  main.rs
src/formatters/: time.rs
src/ui/: header.rs  mod.rs  ui.rs
src/ui/editor/: context.rs  mod.rs  row.rs  table.rs
src/ui/info/: mod.rs
src/ui/menu/: mod.rs
src/ui/timer/: body.rs  data_model.rs  footer.rs  header.rs  mod.rs  timer.rs  widgets.rs
src/utils/: comparisons.rs  time.rs  utils.rs
